--- a/package.json
+++ b/package.json
@@ -22,14 +22,15 @@
   },
   "homepage": "https://github.com/TimeOne-Group/webanalytics.git#readme",
   "dependencies": {
-    "@timeone-group/error-logger-js": "^0.2.2",
-    "@timeone-group/storage-js": "^0.1.4",
+    "@timeone-group/error-logger-js": "^0.2.3",
+    "@timeone-group/storage-js": "^0.2.1",
     "core-js": "^3.9.1",
+    "js-cookie": "^2.2.1",
     "query-string": "^6.14.1"
   },
   "devDependencies": {
     "@ava/babel": "^1.0.1",
-    "@babel/preset-env": "^7.13.9",
+    "@babel/preset-env": "^7.13.10",
     "@babel/register": "^7.13.8",
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-commonjs": "^17.1.0",
@@ -38,16 +39,15 @@
     "await-delay": "^1.0.0",
     "babel-loader-exclude-node-modules-except": "^1.1.2",
     "browser-env": "^3.3.0",
-    "eslint": "^7.21.0",
+    "eslint": "^7.22.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.3.1",
     "nyc": "^15.1.0",
     "prettier": "^2.2.1",
-    "rollup": "^2.40.0",
-    "rollup-plugin-terser": "^7.0.2",
-    "rollup-watch": "^4.3.1"
+    "rollup": "^2.42.1",
+    "rollup-plugin-terser": "^7.0.2"
   },
   "browserslist": "last 2 versions, > 0.5%, ie >= 11",
   "ava": {
@@ -55,6 +55,9 @@
     "require": [
       "./test/_setup-browser-env.js",
       "@babel/register"
+    ],
+    "files": [
+      "test/**"
     ]
   }
 }
