--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
   },
   "homepage": "https://github.com/TimeOne-Group/webanalytics.git#readme",
   "dependencies": {
+    "@lukeed/uuid": "^2.0.0",
     "@timeone-group/error-logger-js": "^0.2.3",
-    "@timeone-group/storage-js": "^0.2.1",
+    "@timeone-group/storage-js": "^0.2.2",
     "core-js": "^3.9.1",
     "js-cookie": "^2.2.1",
+    "jssha": "^3.2.0",
     "query-string": "^6.14.1"
   },
   "devDependencies": {
