--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
     "@timeone-group/storage-js": "^0.2.2",
     "core-js": "^3.9.1",
     "js-cookie": "^2.2.1",
-    "jssha": "^3.2.0",
-    "query-string": "^6.14.1"
+    "jssha": "^3.2.0"
   },
   "devDependencies": {
     "@ava/babel": "^1.0.1",
