--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,3 +14,4 @@ services:
       - 8080:80
     volumes:
       - ./dist:/usr/share/nginx/html:ro
+      - ./docker/web/default.conf:/etc/nginx/conf.d/default.conf
