--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,3 +15,13 @@ services:
     volumes:
       - ./dist:/usr/share/nginx/html:ro
       - ./docker/web/default.conf:/etc/nginx/conf.d/default.conf
+
+  test:
+    image: node:14
+    env_file: .env
+    volumes:
+      - .:/app
+    working_dir: '/app'
+    command: '/app/docker/test/start.sh'
+    depends_on:
+      - web
