--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "rollup -c",
     "start": "rollup -c -w",
-    "test": "nyc ava --watch"
+    "test": "nyc ava --watch --timeout=2m"
   },
   "repository": {
     "type": "git",
@@ -46,8 +46,10 @@
     "eslint-plugin-prettier": "^3.3.1",
     "nyc": "^15.1.0",
     "prettier": "^2.2.1",
+    "regenerator-runtime": "^0.13.7",
     "rollup": "^2.42.1",
-    "rollup-plugin-terser": "^7.0.2"
+    "rollup-plugin-terser": "^7.0.2",
+    "selenium-webdriver": "^4.0.0-beta.2"
   },
   "browserslist": "last 2 versions, > 0.5%, ie >= 11",
   "ava": {
